@@ -45,8 +45,9 @@ Date: 2024-12-08
     - Added a building dedicated to making coolant, so that it can be prioritised in power, and not cause your base to explode. Once again, merciful god.
     - Added I.S.S.Y - a spiderling that is built around its movement capabilities. It has low offensive capabilites, a slightly smaller equipment grid compared to its predeccessor - but is a lot faster. It has a discharge defense and a submachine gun built into it.
     - Added bonus techs for beacon distribution.
-    - Added more borosilicate versions of recipes. (module lights, insert more things here)
+    - Added more borosilicate versions of recipes. (module lights, TWATS, reactor cells, etc)
     - Added bio-module upgrades 4-6. This'll probably be the max amount of upgrades you'll be able to get.
+    - Added a kova recipe for francium.
 
   Changes:
     - Changed CRT's recipe to take CRT framing and screens.
@@ -137,6 +138,7 @@ Date: 2024-12-08
     - Changed projectile damage to be a P-TM bonus, and not a RNM bonus.
     - Doubled the amount of glass needed for normal module lights.
     - Changed francium and caesium to be required to be transported in glass ampules, instead of being in pipes. It was funny, but the time hath passed.
+    - Changed kova recipes to always spit out astatine.
 
   Fixes:
     - Fixed the science pack item names captilisation.
